fixed spacing in filters and wording on create account page

--- a/public/main.css
+++ b/public/main.css
@@ -114,3 +114,8 @@
     margin:0 auto;
     display:block;
 }
+ 
+#filterCourses,
+#sortCourses{
+  margin: 10px;
+}
